--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -2,16 +2,16 @@
 # Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
 # Joe Man <trmetal@yahoo.com.hk>, 2002.
 # Roy Chan <roy.chan@linux.org.hk>, 2004.
-# Abel Cheung <maddog@linuxhall.org>, 2002, 03, 05.
+# Abel Cheung <abel@oaka.org>, 2002, 03, 05.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.9.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-03-16 01:16+0800\n"
-"PO-Revision-Date: 2005-03-25 15:47+0800\n"
-"Last-Translator: Abel Cheung <maddog@linuxhall.org>\n"
-"Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
+"POT-Creation-Date: 2005-06-22 13:12+0000\n"
+"PO-Revision-Date: 2005-06-23 03:45+0800\n"
+"Last-Translator: Abel Cheung <abel@oaka.org>\n"
+"Language-Team: Chinese (traditional) <community@linuxhall.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -668,10 +668,11 @@ msgstr "載入..."
 #: ../src/yelp-window.c:2166
 msgid "translator-credits"
 msgstr ""
-"i18n 程式中文化計劃\n"
-"http://i18n.linux.org.tw/\n"
+"如對翻譯有任何意見，請送一封電子郵件給\n"
+"以下地址，GNOME 翻譯團隊會盡快回覆您：\n"
+"community@linuxhall.org\n"
 "\n"
-"Abel Cheung <maddog@linuxhall.org>, 2002-03, 05\n"
+"Abel Cheung <abel@oaka.org>, 2002-03, 05\n"
 "Roy Chan <roy.chan@linux.org.hk>, 2004\n"
 "Joe Man <trmetal@yahoo.com.hk>, 2002"
 
