--- a/po/de.po
+++ b/po/de.po
@@ -9,13 +9,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-06-17 00:32+0200\n"
-"PO-Revision-Date: 2005-06-17 00:32+0200\n"
+"POT-Creation-Date: 2005-06-26 15:57+0200\n"
+"PO-Revision-Date: 2005-06-26 15:57+0200\n"
 "Last-Translator: Frank Arnold <frank@scirocco-5v-turbo.de>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: data/man.xml.in.h:1 data/toc.xml.in.h:4
 msgid "Applications"
@@ -323,7 +323,7 @@ msgstr "Lesezeichen entfernen"
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
 msgstr ""
-"Ein Lesezeichen mit dem Namen <b>%s</b> exisitiert bereits für diese Seite."
+"Ein Lesezeichen mit dem Namen <b>%s</b> existiert bereits für diese Seite."
 
 #: src/yelp-bookmarks.c:406
 msgid "Document Sections"
@@ -335,7 +335,7 @@ msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not well-formed XML."
 msgstr ""
-"Die Datei »%s« konnte nicht analysiert werden. Entweder exisitiert die Datei "
+"Die Datei »%s« konnte nicht analysiert werden. Entweder existiert die Datei "
 "nicht oder der Inhalt ist kein gültiges XML."
 
 #: src/yelp-db-pager.c:491
@@ -385,7 +385,7 @@ msgstr ""
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
-msgstr "Das Verzeichnis für den Zwischenspeicher festlegen"
+msgstr "Den Ordner für den Zwischenspeicher festlegen"
 
 #: src/yelp-main.c:129
 #, c-format
@@ -406,7 +406,7 @@ msgid ""
 "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
 "formatted incorrectly."
 msgstr ""
-"Die Datei »%s« konnte nicht analysiert werden. Entweder exisitiert die Datei "
+"Die Datei »%s« konnte nicht analysiert werden. Entweder existiert die Datei "
 "nicht oder der Inhalt hat das falsche Format."
 
 #: src/yelp-pager.c:122
@@ -462,7 +462,7 @@ msgid ""
 "The table of contents could not be loaded. The file ‘%s’ is either missing "
 "or is not well-formed XML."
 msgstr ""
-"Das Inhaltsverzeichnis konnte nicht geladen werden. Entweder exisitiert die "
+"Das Inhaltsverzeichnis konnte nicht geladen werden. Entweder existiert die "
 "Datei »%s« nicht oder der Inhalt ist kein gültiges XML."
 
 #: src/yelp-toc-pager.c:881
@@ -471,7 +471,7 @@ msgid ""
 "The table of contents could not be processed. The file ‘%s’ is either "
 "missing or is not a valid XSLT stylesheet."
 msgstr ""
-"Das Inhaltsverzeichnis konnte nicht geladen werden. Entweder exisitiert die "
+"Das Inhaltsverzeichnis konnte nicht geladen werden. Entweder existiert die "
 "Datei »%s« nicht oder der Inhalt ist kein gültiges XSLT-Stylesheet."
 
 #: src/yelp-toc-pager.c:1033 src/yelp-xslt-pager.c:366
@@ -609,7 +609,7 @@ msgstr "Hilfe-Browser"
 #: src/yelp-window.c:700 src/yelp-window.c:833
 msgid "The Uniform Resource Identifier for the file is invalid."
 msgstr ""
-"Der Uniform-Resource-Identifier (URI-Adresse) für diese Datei ist ungültig."
+"Der Uniform-Ressource-Identifier (URI-Adresse) für diese Datei ist ungültig."
 
 #: src/yelp-window.c:712 src/yelp-window.c:828
 #, c-format
@@ -617,7 +617,7 @@ msgid ""
 "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
 "actual file."
 msgstr ""
-"Der Uniform-Resource-Identifier (URI-Adresse) »%s« ist ungültig oder zeigt "
+"Der Uniform-Ressource-Identifier (URI-Adresse) »%s« ist ungültig oder zeigt "
 "nicht auf eine existierende Datei."
 
 #: src/yelp-window.c:788 src/yelp-window.c:1143
@@ -675,7 +675,7 @@ msgid ""
 "not have permissions to read it."
 msgstr ""
 "Die Datei »%s« konnte nicht gelesen werden. Eventuell gibt es sie nicht oder "
-"Sie haben nicht die notwendigen Zugriffrechte um diese zu lesen."
+"Sie haben nicht die notwendigen Zugriffsrechte um diese zu lesen."
 
 #: src/yelp-window.c:1349
 msgid "Loading..."
@@ -701,8 +701,8 @@ msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "improperly formatted."
 msgstr ""
-"Die Datei »%s« konnte nicht analyisiert werden. Entweder exisitiert die "
-"Datei nicht oder sie ist falsch formatiert."
+"Die Datei »%s« konnte nicht analysiert werden. Entweder existiert die Datei "
+"nicht oder sie ist falsch formatiert."
 
 #: src/yelp-xslt-pager.c:216 src/yelp-xslt-pager.c:229
 #, c-format
@@ -716,4 +716,3 @@ msgstr ""
 #: yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Hilfe zu GNOME holen"
-
