--- a/po/mk.po
+++ b/po/mk.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: yelp.gnome-2.6.mk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-07-02 06:24+0000\n"
-"PO-Revision-Date: 2005-07-02 12:40+0200\n"
+"PO-Revision-Date: 2005-07-03 13:59+0200\n"
 "Last-Translator: Arangel Angov <ufo@linux.net.mk>\n"
 "Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
 "MIME-Version: 1.0\n"
@@ -348,7 +348,7 @@ msgstr "Се појави непозната грешка"
 
 #: ../src/yelp-error.c:46
 msgid "Could not load document"
-msgstr ""
+msgstr "Не можам да го вчитам форматот"
 
 #: ../src/yelp-error.c:48
 msgid "Could not load section"
@@ -360,11 +360,11 @@ msgstr "Не можам да ја вчитам содржината"
 
 #: ../src/yelp-error.c:52
 msgid "Unsupported Format"
-msgstr ""
+msgstr "Не поддржан формат"
 
 #: ../src/yelp-error.c:54
 msgid "Could not read document"
-msgstr ""
+msgstr "Не можам да го прочитам документот"
 
 #: ../src/yelp-error.c:56
 msgid "Could not process document"
@@ -436,7 +436,7 @@ msgstr ""
 #.
 #: ../src/yelp-settings.c:156
 msgid "yelp-watermark-blockquote-201C"
-msgstr ""
+msgstr "yelp-watermark-blockquote-201C"
 
 #: ../src/yelp-toc-pager.c:271
 msgid "YelpTocPager: Pause count is negative."
@@ -584,7 +584,7 @@ msgstr "_Отвори врска"
 
 #: ../src/yelp-window.c:388
 msgid "Open Link in _New Window"
-msgstr ""
+msgstr "Отвори ја врската во _нов прозорец"
 
 #: ../src/yelp-window.c:393
 msgid "_Copy Link Address"
@@ -640,7 +640,7 @@ msgstr "Најди _претходно"
 msgid ""
 "A transformation context could not be created for the file ‘%s’. The format "
 "may not be supported."
-msgstr ""
+msgstr "Трансформираната содржината не може да биде креирана за '%s'. Форматот не е поддржан."
 
 #: ../src/yelp-window.c:1190 ../src/yelp-window.c:1614
 #: ../src/yelp-window.c:1681
