Make bookmark headers insensitive

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-05  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-bookmarks.c: 
+	- Make bookmark headers insensitive
+	
 2005-05-19  Shaun McCance  <shaunm@gnome.org>
 
 	* data/man.xml.in:
