--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,32 @@
+Changes in 2.11.1:
+------------------
+* Made bookmark headers insensitive            (Don Scorgie)
+* Use gobject private data, fixing bug #140632 (Christian Persch)
+* All sorts of Gecko backend stuff             (Christian Persch)
+* Position the navbar at the bottom            (Shaun McCance)
+* Changed color parameters around              (Shaun McCance)
+* Added trail of links to parent sections      (Shaun McCance)
+* Added JS magic to the linktrail              (Stuart Langridge)
+* Depend on gnome-doc-utils 0.3.1              (Shaun McCance)
+* Set a minimum font size of 8pt               (Shaun McCance)
+* Updated translations:
+  bg      (Vladimir Petkov)
+  cs      (Miloslav Trmac)
+  da      (Martin Willemoes Hansen)
+  de      (Hendrik Brandt)
+  es      (Francisco Javier F. Serrador)
+  et      (Ivar Smolin)
+  gl      (Ignacio Casal Quinteiro)
+  it      (Alessio Frusciante)
+  nb      (Terance Sola)
+  nl      (Tino Meinen)
+  no      (Terance Sola)
+  sv      (Christian Rose)
+  zh_TW   (Abel Cheung)
+  en_CA   (Adam Weinberger)
+  eu      (Iñaki Larrañaga)
+  el      (Kostas Papadimas)
+
 Changes in 2.10.0:
 ------------------
 * Code cleanup (Paolo Borelli)
