--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-12  Shaun McCance  <shaunm@gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.11.1
+
 2005-07-05  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-toc-pager.c:
