--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,9 @@
-2005-07-09  Clytie Siddall <clytie@riverland.net.au>
+2005-07-13  Roozbeh Pournader  <roozbeh@farsiweb.info>
+
+	* fa.po: Updated Persian translation by Masoud Ahmadzadeh
+	<masoud@bamdad.org> and Meelad Zakaria <meelad@farsiweb.info>.
+
+2005-07-09  Clytie Siddall  <clytie@riverland.net.au>
 
         * vi.po: Updated Vietnamese translation.
 
