--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-13  Roozbeh Pournader  <roozbeh@farsiweb.info>
+
+	* fa.po: Updated Persian translation by Masoud Ahmadzadeh
+	<masoud@bamdad.org> and Meelad Zakaria <meelad@farsiweb.info>.
+
 2005-06-26  Hendrik Brandt  <heb@gnome-de.org>
 
         * de.po: Updated German translation.
