--- a/po/mk.po
+++ b/po/mk.po
@@ -1,26 +1,29 @@
+# translation of mk.po to Macedonian
 # translation of yelp.gnome-2.6.mk.po to Macedonian
 # translation of yelp.HEAD.mk.po to
 # translation of yelp.HEAD.mk.po to Macedonian
 # translation of yelp.HEAD.po to Macedonian
 # Yelp translated on Macedonian
-# Copyright (C) 2002,2003, 2004 Free Software Foundation, Inc.
+# Copyright (C) 2002,2003, 2004, 2005 Free Software Foundation, Inc.
 # Stojcev Darko <atom1c@linux.net.mk
 # http://www.linux.net.mk
 # Ivan Stojmirov <stojmir@linux.net.mk>, 2002.
 # Igor Popovski <igor@popovski.com.mk>, 2003.
 # Aleksandar Savic <savica@mt.net.mk>, 2004.
 # Arangel Angov <ufo@linux.net.mk>, 2004.
+# Арангел Ангов <ufo@linux.net.mk>, 2005.
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp.gnome-2.6.mk\n"
+"Project-Id-Version: mk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-07-02 06:24+0000\n"
-"PO-Revision-Date: 2005-07-03 13:59+0200\n"
-"Last-Translator: Arangel Angov <ufo@linux.net.mk>\n"
-"Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
+"POT-Creation-Date: 2005-07-17 15:06+0000\n"
+"PO-Revision-Date: 2005-07-17 23:25+0200\n"
+"Last-Translator: Арангел Ангов <ufo@linux.net.mk>\n"
+"Language-Team: Macedonian <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.10\n"
 
 #: ../data/man.xml.in.h:1 ../data/toc.xml.in.h:4
 msgid "Applications"
@@ -54,7 +57,7 @@ msgstr "Рутини на кернелот"
 msgid "Library Functions"
 msgstr "Функции од библиотеките"
 
-#: ../data/man.xml.in.h:9 ../src/yelp-toc-pager.c:790
+#: ../data/man.xml.in.h:9 ../src/yelp-toc-pager.c:792
 msgid "Manual Pages"
 msgstr "Страници со упатства"
 
@@ -92,7 +95,7 @@ msgstr "Системски повици"
 
 #: ../data/man.xml.in.h:18
 msgid "Termcap Applications"
-msgstr ""
+msgstr "Termcap апликации"
 
 #: ../data/man.xml.in.h:19
 msgid "X11 Applications"
@@ -236,7 +239,7 @@ msgstr "Ре_именувај"
 
 #: ../data/ui/yelp.glade.h:12
 msgid "_Browse with caret"
-msgstr ""
+msgstr "_Разгледај со цртичка"
 
 #: ../data/ui/yelp.glade.h:13
 msgid "_Find: "
@@ -272,7 +275,7 @@ msgstr "_Завиткај околу"
 
 #: ../data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
-msgstr ""
+msgstr "Font for fixed text"
 
 #: ../data/yelp.schemas.in.h:2
 msgid "Font for text"
@@ -280,19 +283,19 @@ msgstr "Фонт за текстот"
 
 #: ../data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
-msgstr ""
+msgstr "Font for text with fixed width."
 
 #: ../data/yelp.schemas.in.h:4
 msgid "Font for text with variable width."
-msgstr ""
+msgstr "Font for text with variable width."
 
 #: ../data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
-msgstr ""
+msgstr "Користи цртичка контролирана од тастатура за преглед на страни."
 
 #: ../data/yelp.schemas.in.h:6
 msgid "Use caret"
-msgstr ""
+msgstr "Користи цртичка"
 
 #: ../data/yelp.schemas.in.h:7
 msgid "Use system fonts"
@@ -337,6 +340,8 @@ msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not well-formed XML."
 msgstr ""
+"Датотеката ‘%s’ не може да биде парсирана. Или датотеката не постои или пак бе е "
+"форматирана како XML."
 
 #: ../src/yelp-db-pager.c:491
 msgid "Unknown Section"
@@ -380,6 +385,8 @@ msgid ""
 "The file ‘%s’ could not be read and decoded. The file may be compressed in "
 "an unsupported format."
 msgstr ""
+"Датотеката ‘%s’ не може да биде прочитана и декодирана. Можеби датотеката е компресирана "
+"во неподдржан формат."
 
 #: ../src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -404,6 +411,8 @@ msgid ""
 "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
 "formatted incorrectly."
 msgstr ""
+"Датотеката ‘%s’ не може да биде парсирана.  Или датотеката не постои или пак "
+"е форматирана неправилно."
 
 #: ../src/yelp-pager.c:122
 msgid "Document Information"
@@ -411,7 +420,7 @@ msgstr "Информации за документот"
 
 #: ../src/yelp-pager.c:123
 msgid "The YelpDocInfo struct of the document"
-msgstr ""
+msgstr "The YelpDocInfo struct of the document"
 
 #. TRANSLATORS:
 #. This is an image of the opening quote character used to watermark
@@ -426,7 +435,7 @@ msgstr ""
 #. If you need an image created, contact the maintainers.
 #.
 #. Phew, now some notes on which character to use.  Languages that
-#. use guillemets (angle quotations) should use either 00AB or AABB,
+#. use guillemets (angle quotations) should use either 00AB or 00BB,
 #. depending on whether the opening quotation is the left guillemet
 #. or the right guillemet.  Languages that use inverted comma style
 #. quotations should use 201C, 201D, or 201E.  Note that single
@@ -452,29 +461,33 @@ msgstr "Не можам да ја вчитам OMF датотеката: '%s'."
 msgid "Read man page for %s"
 msgstr "Прочитајте ја man страницата за %s"
 
-#: ../src/yelp-toc-pager.c:770
+#: ../src/yelp-toc-pager.c:772
 #, c-format
 msgid ""
 "The table of contents could not be loaded. The file ‘%s’ is either missing "
 "or is not well-formed XML."
 msgstr ""
+"Содржината не може да се вчита. Датотеката ‘%s’ недостастува или "
+"пак не е добро формиран XML."
 
-#: ../src/yelp-toc-pager.c:881
+#: ../src/yelp-toc-pager.c:883
 #, c-format
 msgid ""
 "The table of contents could not be processed. The file ‘%s’ is either "
 "missing or is not a valid XSLT stylesheet."
 msgstr ""
+"Содржината не може да биде обработена. Датотеката ‘%s’ недостастува "
+"или пак не е валиден XSLT."
 
-#: ../src/yelp-toc-pager.c:1033 ../src/yelp-xslt-pager.c:366
+#: ../src/yelp-toc-pager.c:1035 ../src/yelp-xslt-pager.c:366
 msgid "No href attribute found on yelp:document"
 msgstr "Не е пронајден href атрибут на yelp:document"
 
-#: ../src/yelp-toc-pager.c:1047 ../src/yelp-xslt-pager.c:382
+#: ../src/yelp-toc-pager.c:1049 ../src/yelp-xslt-pager.c:382
 msgid "Out of memory"
 msgstr "Нема повеќе меморија"
 
-#: ../src/yelp-toc-pager.c:1088
+#: ../src/yelp-toc-pager.c:1090
 msgid "Help Contents"
 msgstr "Содржина на помош"
 
@@ -600,7 +613,7 @@ msgstr "Прелистувач на документи за помош"
 
 #: ../src/yelp-window.c:700 ../src/yelp-window.c:833
 msgid "The Uniform Resource Identifier for the file is invalid."
-msgstr ""
+msgstr "Идентификаторот за униформниот ресурс за датотеката е невалиден."
 
 #: ../src/yelp-window.c:712 ../src/yelp-window.c:828
 #, c-format
@@ -608,20 +621,24 @@ msgid ""
 "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
 "actual file."
 msgstr ""
+"Идентификаторот за униформниот ресурс ‘%s’ е невалиден или пак не води"
+"до датотеката."
 
 #: ../src/yelp-window.c:788 ../src/yelp-window.c:1143
 msgid "Man pages are not supported in this version."
-msgstr ""
+msgstr "Упатствата не се поддржани во оваа верзија."
 
 #: ../src/yelp-window.c:798 ../src/yelp-window.c:1134
 msgid "GNU info pages are not supported in this version"
-msgstr ""
+msgstr "GNU страниците со информации не се поддржани во оваа верзија."
 
 #: ../src/yelp-window.c:808
 msgid ""
 "SGML documents are no longer supported. Please ask the author of the "
 "document to convert to XML."
 msgstr ""
+"SGML документи повеќе не се поддржани. Ве молам прашајте го авторот на "
+"документот да конвертира во XML."
 
 #: ../src/yelp-window.c:1027
 msgid "Find:"
@@ -640,7 +657,9 @@ msgstr "Најди _претходно"
 msgid ""
 "A transformation context could not be created for the file ‘%s’. The format "
 "may not be supported."
-msgstr "Трансформираната содржината не може да биде креирана за '%s'. Форматот не е поддржан."
+msgstr ""
+"Трансформираната содржината не може да биде креирана за '%s'. Форматот не е "
+"поддржан."
 
 #: ../src/yelp-window.c:1190 ../src/yelp-window.c:1614
 #: ../src/yelp-window.c:1681
@@ -650,6 +669,9 @@ msgid ""
 "this section from a Help button in an application, please report this to the "
 "maintainers of that application."
 msgstr ""
+"Одделот ‘%s’ не постои во овој документ. Ако тука ве доведе копче за "
+"помош во некоја апликација, Ве молам пријавете го ова на оддржувачот "
+"на апликацијата."
 
 #: ../src/yelp-window.c:1305
 #, c-format
@@ -657,6 +679,8 @@ msgid ""
 "The file ‘%s’ could not be read.  This file might be missing, or you might "
 "not have permissions to read it."
 msgstr ""
+"Датотеката ‘%s’ не може да биде прочитана.  Оваа датотека можеби недостасува или пак "
+"немате пермисии да ја прочитате."
 
 #: ../src/yelp-window.c:1349
 msgid "Loading..."
@@ -678,6 +702,8 @@ msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "improperly formatted."
 msgstr ""
+"Датотеката ‘%s’ не може да биде парсирана. Или датотеката не постои или пак "
+"е погрешно форматирана."
 
 #: ../src/yelp-xslt-pager.c:216 ../src/yelp-xslt-pager.c:229
 #, c-format
@@ -685,323 +711,10 @@ msgid ""
 "The document ‘%s’ could not be processed. The file ‘%s’ is either missing, "
 "or it is not a valid XSLT stylesheet."
 msgstr ""
+"Документот ‘%s’ не може да биде обработен. Датотеката ‘%s’ недостасува, "
+"или пак е невалиден XSLT."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Побарај помош со Гном"
 
-#, fuzzy
-#~ msgid "_Home"
-#~ msgstr "На почеток"
-
-#~ msgid "Go to home view"
-#~ msgstr "Врати се на почетокот"
-
-#, fuzzy
-#~ msgid "Fin_d"
-#~ msgstr "Најди"
-
-#~ msgid "Development Environments"
-#~ msgstr "Развојни околини"
-
-#~ msgid "Development Tools"
-#~ msgstr "Алатки за развој"
-
-#~ msgid "Editors"
-#~ msgstr "Уредувачи"
-
-#~ msgid "Games and Entertainment"
-#~ msgstr "Игри и забава"
-
-#~ msgid "General"
-#~ msgstr "Општо"
-
-#~ msgid "Internet Applications"
-#~ msgstr "Интернет апликации"
-
-#~ msgid "Kernels"
-#~ msgstr "Кернели"
-
-#~ msgid "Office and Productivity Applications"
-#~ msgstr "Канцелариски апликации"
-
-#~ msgid "Securities"
-#~ msgstr "Безбедности"
-
-#~ msgid "System"
-#~ msgstr "Систем"
-
-#~ msgid "Utilities"
-#~ msgstr "Алатки"
-
-#~ msgid "*"
-#~ msgstr "*"
-
-#~ msgid "Titlepage"
-#~ msgstr "Насловна страница"
-
-#~ msgid "The selected document could not be opened"
-#~ msgstr "Избраниот документ не може да се отвори"
-
-#~ msgid "The selected page could not be found in this document."
-#~ msgstr "Избраната страница не е најдена во овој документ."
-
-#~ msgid "The table of contents could not be read."
-#~ msgstr "Содржината не може да биде прочитана."
-
-#~ msgid "DocBook SGML documents are no longer supported."
-#~ msgstr "DocBook SGML документите не се повеќе поддржани."
-
-#~ msgid "The selected file could not be read."
-#~ msgstr "Избраната датотека не може да биде прочитана."
-
-#, fuzzy
-#~ msgid "The file could not be processed."
-#~ msgstr "Избраната датотека не може да биде прочитана."
-
-#~ msgid "X11"
-#~ msgstr "X11"
-
-#~ msgid "OpenSSL"
-#~ msgstr "OpenSSL"
-
-#~ msgid "Termcap"
-#~ msgstr "Termcap"
-
-#~ msgid "Perl"
-#~ msgstr "Perl"
-
-#~ msgid "Qt"
-#~ msgstr "Qt"
-
-#~ msgid "TIFF"
-#~ msgstr "TIFF"
-
-#~ msgid "PThreads"
-#~ msgstr "PThreads"
-
-#~ msgid "Categories"
-#~ msgstr "Категории"
-
-#~ msgid "Documents"
-#~ msgstr "Документи"
-
-#, fuzzy
-#~ msgid "_Next Page"
-#~ msgstr "/Оди/_Наредна страница"
-
-#~ msgid "&#8216;"
-#~ msgstr "&#8216;"
-
-#~ msgid "&#8217;"
-#~ msgstr "&#8217;"
-
-#~ msgid "&#8220;"
-#~ msgstr "&#8220;"
-
-#~ msgid "&#8221;"
-#~ msgstr "&#8221;"
-
-#~ msgid "About This Article"
-#~ msgstr "За овој артикал"
-
-#~ msgid "About This Bibliography"
-#~ msgstr "За оваа библиографија"
-
-#~ msgid "About This Book"
-#~ msgstr "За оваа книга"
-
-#~ msgid "About This Chapter"
-#~ msgstr "За оваа глава"
-
-#~ msgid "About This Entry"
-#~ msgstr "За овој запис"
-
-#~ msgid "About This Glossary"
-#~ msgstr "За овој речник"
-
-#~ msgid "About This Index"
-#~ msgstr "За овој индекс"
-
-#~ msgid "About This Part"
-#~ msgstr "За овој дел"
-
-#~ msgid "About This Preface"
-#~ msgstr "За овој Preface"
-
-#~ msgid "About This Reference"
-#~ msgstr "За оваа референца"
-
-#~ msgid "About This Section"
-#~ msgstr "За овој оддел"
-
-#~ msgid "Affiliation"
-#~ msgstr "Повразаност"
-
-#~ msgid "Appendix"
-#~ msgstr "Appendix"
-
-#~ msgid "Article"
-#~ msgstr "Артикал"
-
-#~ msgid "Audience"
-#~ msgstr "Публика"
-
-#~ msgid "Author"
-#~ msgstr "Автор"
-
-#~ msgid "Authors"
-#~ msgstr "Автори"
-
-#~ msgid "Bibliography"
-#~ msgstr "Библиографија"
-
-#~ msgid "Caution"
-#~ msgstr "Предупредување"
-
-#~ msgid "Chapter"
-#~ msgstr "Глава"
-
-#~ msgid "Collaborator"
-#~ msgstr "Помагач"
-
-#~ msgid "Collaborators"
-#~ msgstr "Помагачи"
-
-#~ msgid "Colophon"
-#~ msgstr "Colophon"
-
-#~ msgid "Copyright"
-#~ msgstr "Copyright"
-
-#~ msgid "Copyrights"
-#~ msgstr "Copyrights"
-
-#~ msgid "Date"
-#~ msgstr "Датум"
-
-#~ msgid "Dedication"
-#~ msgstr "Посвета"
-
-#~ msgid "Editor"
-#~ msgstr "Уредувач"
-
-#~ msgid "Email"
-#~ msgstr "Е-пошта"
-
-#~ msgid "Example"
-#~ msgstr "Пример"
-
-#~ msgid "Figure"
-#~ msgstr "Фигура"
-
-#~ msgid "Glossary"
-#~ msgstr "Речник"
-
-#~ msgid "Important"
-#~ msgstr "Важно"
-
-#~ msgid "Index"
-#~ msgstr "Индекс"
-
-#~ msgid "Legal Notice"
-#~ msgstr "Забелешка"
-
-#~ msgid "Level"
-#~ msgstr "Ниво"
-
-#~ msgid "Message Audience"
-#~ msgstr "Публика на порака"
-
-#~ msgid "Message Level"
-#~ msgstr "Ниво на порака"
-
-#~ msgid "Message Origin"
-#~ msgstr "Потекло на порака"
-
-#~ msgid "Note"
-#~ msgstr "Забелешка"
-
-#~ msgid "Origin"
-#~ msgstr "Потекло"
-
-#~ msgid "Other Contributor"
-#~ msgstr "Друг помагач"
-
-#~ msgid "Other Contributors"
-#~ msgstr "Други помагачи"
-
-#~ msgid "Part"
-#~ msgstr "Дел"
-
-#~ msgid "Preface"
-#~ msgstr "Preface"
-
-#~ msgid "Publisher"
-#~ msgstr "Издавач"
-
-#~ msgid "Publishers"
-#~ msgstr "Издавачи"
-
-#~ msgid "Reference"
-#~ msgstr "Референца"
-
-#~ msgid "Reference Entry"
-#~ msgstr "Запис на референца"
-
-#~ msgid "Reference Section"
-#~ msgstr "Оддел на референца"
-
-#~ msgid "Release Information"
-#~ msgstr "Информации за објавување"
-
-#~ msgid "Revision History"
-#~ msgstr "Историја на ревизии"
-
-#~ msgid "See"
-#~ msgstr "Провери"
-
-#~ msgid "Set Index"
-#~ msgstr "Постави индекс"
-
-#~ msgid "Table"
-#~ msgstr "Табела"
-
-#~ msgid "Table of Contents"
-#~ msgstr "Содржина"
-
-#~ msgid "Tip"
-#~ msgstr "Совет"
-
-#~ msgid "Title"
-#~ msgstr "Наслов"
-
-#~ msgid "Warning"
-#~ msgstr "Предупредување"
-
-#~ msgid "Document URI"
-#~ msgstr "Документ URI"
-
-#~ msgid "The URI of the document to be processed"
-#~ msgstr "URI на документ за обработка"
-
-#~ msgid "/Edit/Find Pre_vious"
-#~ msgstr "/Уреди/Најди претходно"
-
-#~ msgid "/Go/_Back"
-#~ msgstr "/Оди/Назад"
-
-#~ msgid "/Go/_Forward"
-#~ msgstr "/Оди/_Напред"
-
-#~ msgid "/Go/_Home"
-#~ msgstr "/Оди/_На почеток"
-
-#~ msgid "/Go/"
-#~ msgstr "/Оди/"
-
-#~ msgid "/Go/_Contents"
-#~ msgstr "/Оди/Содржини"
-
-#~ msgid "A Help Browser for GNOME"
-#~ msgstr "Прелистувач на документи за помош за Гном 2.0"
