--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-24  Clytie Siddall <clytie@riverland.net.au>
+
+        * vi.po: Updated Vietnamese translation.
+
 2005-07-21 Ankit Patel <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
@@ -74,7 +78,7 @@
 
 	* en_CA.po: Updated Canadian English translation.
 
-2005-05-21  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+2005-05-21  Iï¿½aki Larraï¿½aga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
 
@@ -103,7 +107,7 @@
 
 	* wa.po: Updated Walloon file
 
-2005-04-14  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+2005-04-14  Iï¿½aki Larraï¿½aga  <dooteo@euskalgnu.org>
 
 	* eu.po: Upodated Basque translation.
 
