Don't crash if a template isn't found when walking.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-25  Ross Burton  <ross@burtonini.com>
+
+	* src/yelp-db-pager.c:
+	Don't crash if a template isn't found when walking.
+
 2005-07-25  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
