Updated Serbian translation by Slobodan Sredojevic.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-27  Danilo Šegan  <danilo@gnome.org>
+
+	* sr.po, sr@Latn.po: Updated by Slobodan Sredojević.
+
 2005-07-25  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
