--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-28  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2005-07-27  Danilo Šegan  <danilo@gnome.org>
 
 	* sr.po, sr@Latn.po: Updated by Slobodan Sredojević.
