Bulk changes to Finnish strings

--- a/po/fi.po
+++ b/po/fi.po
@@ -507,7 +507,7 @@ msgstr "_Kirjanmerkit"
 
 #: ../src/yelp-window.c:290
 msgid "_Help"
-msgstr "_Ohje"
+msgstr "O_hje"
 
 #: ../src/yelp-window.c:293
 msgid "_New Window"
