--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-15  Maxim Dziumanenko <mvd@mylinux.ua>
+
+	* uk.po: Update Ukrainian translation
+
 2005-08-15  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Hungarian translation updated.
