--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-18  Mugurel Tudor  <mugurelu@gnome.ro>
+
+	* ro.po: Updated Romanian translation
+
 2005-08-15  Maxim Dziumanenko <mvd@mylinux.ua>
 
 	* uk.po: Update Ukrainian translation
