Updated Greek Translation

--- a/po/el.po
+++ b/po/el.po
@@ -125,7 +125,7 @@ msgstr "Επισκοπήσεις X11"
 
 #: ../data/toc.xml.in.h:1
 msgid "Accessibility"
-msgstr "Προσβασιμότητα"
+msgstr "Προσιτότητα"
 
 #: ../data/toc.xml.in.h:2
 msgid "Accessories"
@@ -201,7 +201,7 @@ msgstr "Εφαρμογές X"
 
 #: ../data/ui/yelp.glade.h:1
 msgid "<b>Accessibility</b>"
-msgstr "<b>Προσβασιμότητα</b>"
+msgstr "<b>Προσιτότητα</b>"
 
 #: ../data/ui/yelp.glade.h:2
 msgid "<b>Fonts</b>"
