--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-21 Kostas Papadimas <pkst@gnome.org>
+
+	* el.po Updated Greek Translation
+
 2005-08-18  Mugurel Tudor  <mugurelu@gnome.ro>
 
 	* ro.po: Updated Romanian translation
