--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,32 @@
+Changes in 2.11.92:
+-------------------
+* All sorts of Gecko backend stuff                 (Christian Persch)
+* Fix typo in character code in translator comment (Behdad Esfahbod)
+* Small fixes                                      (Ross Burton)
+* Fix crash                                        (Don Scorgie)
+* Updated translations:
+  el     (Nikos Charonitakis)
+  fa     (Meelad Zakaria)
+  fi     (Ilkka Tuohela)
+  gu     (Ankit Patel)
+  he     (Yuval Tanny)
+  hu     (Gabor Kelemen)
+  id     (Ahmad Riza H Nst)
+  ja     (Takeshi AIHANA)
+  nl     (Reinout van Schouwen)
+  pl     (Bartosz Kosiorek)
+  pt_BR  (Estêvão Samuel Procópio)
+  pt     (Duarte Loreto)
+  ro     (Mugurel Tudor)
+  sq     (Laurent Dhima)
+  sr     (Слободан Д. Средојевић)
+  sv     (Christian Rose)
+  th     (Theppitak Karoonboonyanan)
+  uk     (Maxim Dzumanenko)
+  vi     (Clytie Siddall)
+  zh_CN  (Funda Wang)
+  zh_TW  (Abel Cheung)
+
 Changes in 2.11.1:
 ------------------
 * Made bookmark headers insensitive            (Don Scorgie)
