--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-24  Vincent Untz  <vuntz@gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.11.92
+
 2005-08-19  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
