- post-release bump to 2.12.0
2005-08-24  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	- post-release bump to 2.12.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-08-24  Vincent Untz  <vuntz@gnome.org>
 
+	* configure.in:
+	- post-release bump to 2.12.0
+
+==================== 2.11.92 ====================
+
+2005-08-24  Vincent Untz  <vuntz@gnome.org>
+
 	* NEWS:
 	* configure.in:
 	- Version 2.11.92
