--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-25  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 ==================== 2.11.92 ====================
 
 2005-08-23  Gabor Kelemen  <kelemeng@gnome.hu>
