--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-26  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Jean-Michel Ardantz <jmardantz@ifrance.com>.
+
 2005-08-25  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
