--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-29  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation by Young-Ho Cha.
+
 2005-08-26  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
