--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-02  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: Updated Russian translation
+
 2005-08-31  Žygimantas Beručka  <zygis@gnome.org>
 
 	* lt.po: Updated Lithuanian translation.
