--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+==================== 2.12.0 ====================
+
+2005-09-06  Shaun McCance  <shaunm@gnome.org>
+
+	* NEWS:
+	- Version 2.12.0
+
 2005-08-29  Shaun McCance  <shaunm@gnome.org>
 
 	* data/ui/yelp-ui.xml:
