--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Changes in 2.12.0:
+------------------
+* Enabled F7 keybinding, as per #157941    (Shaun McCance)
+* Don't crash on invalid DocBook, #310420  (Brent Smith)
+* Updated translations:
+  ca      (Jordi Mallach)
+  cy      (Telsa Gwynne)
+  fr      (Christophe Merlet)
+  ko      (Young-Ho Cha)
+  lt      (Žygimantas Beručka)
+  ru      (Leonid Kanter)
+  tr      (Baris Cicek)
+
 Changes in 2.11.92:
 -------------------
 * All sorts of Gecko backend stuff                 (Christian Persch)
