*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 ==================== 2.12.0 ====================
 
+2005-09-10  Erdal Ronahi  <erdal.ronahi@gmail.com>
+        * po/ku.po
+        - Added Kurdish translation
+
 2005-09-06  Shaun McCance  <shaunm@gnome.org>
 
 	* NEWS:
