--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,6 @@
+2005-09-10  Erdal Ronahi <erdal.ronahi@gmail.com>
+        * ku.po: Created Kurdish Translation
+
 2005-09-05  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish Translation
