--- a/po/vi.po
+++ b/po/vi.po
@@ -239,7 +239,7 @@ msgstr "_Tìm: "
 
 #: ../data/ui/yelp.glade.h:14
 msgid "_Fixed width:"
-msgstr "Độ rộng cố _định:"
+msgstr "Độ rộng cố đị_nh:"
 
 #: ../data/ui/yelp.glade.h:15
 msgid "_Location:"
