vi.po: Updated Vietnamese translation.

--- a/po/vi.po
+++ b/po/vi.po
@@ -1,14 +1,14 @@
-# Vietnamese translation for yelp.
+# Vietnamese translation for Yelp.
 # Copyright © 2005 Gnome i18n Project for Vietnamese.
 # pclouds <pclouds@vnlinux.org>, 2002-2004, 2005.
 # Clytie Siddall <clytie@riverland.net.au>, 2005.
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: Yelp GNOME 2.12\n"
+"Project-Id-Version: Yelp 2.11.92 GNOME HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-07-23 22:44+0000\n"
-"PO-Revision-Date: 2005-07-24 15:01+0930\n"
+"PO-Revision-Date: 2005-09-16 17:48+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -151,7 +151,7 @@ msgstr "KDE"
 
 #: ../data/toc.xml.in.h:12
 msgid "Multimedia"
-msgstr "Đa phương tiện"
+msgstr "Đa vật chứa"
 
 #: ../data/toc.xml.in.h:13
 msgid "Office"
@@ -321,7 +321,7 @@ msgstr "Loại bỏ Đánh dấu"
 #: ../src/yelp-bookmarks.c:306 ../src/yelp-bookmarks.c:378
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
-msgstr "Đánh dấu tên <b>%s</b> cho trang này đã có rồi."
+msgstr "Đánh dấu tên <b>%s</b> cho trang này đã có."
 
 #: ../src/yelp-bookmarks.c:406
 msgid "Document Sections"
@@ -470,7 +470,7 @@ msgid ""
 "missing or is not a valid XSLT stylesheet."
 msgstr ""
 "Không thể xử lý mục lục. Hoặc thiếu tập tin «%s», hoặc không phải là một tờ "
-"kiểu dạng XSLT hợp lệ."
+"kiểu dáng XSLT hợp lệ."
 
 #: ../src/yelp-toc-pager.c:1035 ../src/yelp-xslt-pager.c:366
 msgid "No href attribute found on yelp:document"
@@ -518,7 +518,7 @@ msgstr "Mở _vị trí"
 
 #: ../src/yelp-window.c:308
 msgid "_Close Window"
-msgstr "Đón_g cửa sổ"
+msgstr "_Đóng cửa sổ"
 
 #: ../src/yelp-window.c:314
 msgid "_Copy"
@@ -602,7 +602,7 @@ msgstr "_Giới thiệu"
 
 #: ../src/yelp-window.c:448
 msgid "Help Browser"
-msgstr "Trình trợ giúp"
+msgstr "Bộ trợ giúp"
 
 #: ../src/yelp-window.c:700 ../src/yelp-window.c:833
 msgid "The Uniform Resource Identifier for the file is invalid."
@@ -687,7 +687,7 @@ msgstr "Nhóm Việt hoá GNOME (http://gnomevi.sourceforge.net)"
 
 #: ../src/yelp-window.c:2184
 msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr "Trình duyệt và xem tài liệu cho màn hình làm việc Gnome."
+msgstr "Bộ duyệt và xem tài liệu cho màn hình làm việc Gnome."
 
 #: ../src/yelp-xslt-pager.c:195
 #, c-format
@@ -705,7 +705,7 @@ msgid ""
 "or it is not a valid XSLT stylesheet."
 msgstr ""
 "Không thể xử lý tập tin «%s». Hoặc tập tin «%s» không tồn tại, hoặc không "
-"phải là một tờ kiểu dạng XSLT hợp lệ."
+"phải là một tờ kiểu dáng XSLT hợp lệ."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
