--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-16  Clytie Siddall <clytie@riverland.net.au>
+
+        * vi.po: Updated Vietnamese translation.
+
 2005-09-10  Erdal Ronahi <erdal.ronahi@gmail.com>
         * ku.po: Created Kurdish Translation
 
