--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+==================== 2.12.1 ====================
+
+2005-09-17  Shaun McCance  <shaunm@gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.12.1
+
 ==================== 2.12.0 ====================
 
 2005-09-10  Erdal Ronahi  <erdal.ronahi@gmail.com>
