--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 2.12.1:
+------------------
+* Updated translations:
+  ku      (Erdal Ronahi)
+  vi      (Clytie Siddall)
+
 Changes in 2.12.0:
 ------------------
 * Enabled F7 keybinding, as per #157941    (Shaun McCance)
