--- a/po/ku.po
+++ b/po/ku.po
@@ -4,26 +4,26 @@
 # This file is distributed under the same license as the yelp package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2005.
 # Erdal Ronahi <erdal.ronahi@gmail.com>, 2005.
+# Erdal Ronahi <erdal.ronahi@gmail.com, pckurd@hotmail.com>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2005-07-07 20:01:06.928031+00:00\n"
-"PO-Revision-Date: 2005-09-10 13:31+0200\n"
-"Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
+"PO-Revision-Date: 2005-09-16 15:53+0200\n"
+"Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com, pckurd@hotmail.com>\n"
 "Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Rosetta-Version: 0.1\n"
-"Plural-Forms: nplurals=2; plural=n != 1\n"
-"X-Generator: KBabel 1.10.2\n"
+"Plural-Forms: nplurals=2; plural= n != 1\n"
+"X-Generator: KBabel 1.10\n"
 
 #: ../data/man.xml.in.h:1 ../data/toc.xml.in.h:4
-#, fuzzy
 msgid "Applications"
-msgstr "Peyikanan"
+msgstr "Bikaranîn"
 
 #: ../data/man.xml.in.h:2
 msgid "Configuration Files"
@@ -122,8 +122,9 @@ msgid "Accessibility"
 msgstr "Gihîştin"
 
 #: ../data/toc.xml.in.h:2
+#, fuzzy
 msgid "Accessories"
-msgstr ""
+msgstr "Gihîştin"
 
 #: ../data/toc.xml.in.h:3
 msgid "Administration"
@@ -167,7 +168,7 @@ msgstr "Wekî din"
 
 #: ../data/toc.xml.in.h:15
 msgid "Other Documentation"
-msgstr ""
+msgstr "Pelgeyên din"
 
 #: ../data/toc.xml.in.h:16
 msgid "Panel Applets"
@@ -203,7 +204,7 @@ msgstr "<b>Cureyên nivîsê</b>"
 
 #: ../data/ui/yelp.glade.h:3
 msgid "<b>_Bookmarks:</b>"
-msgstr ""
+msgstr "<b>_Bijare:</b>"
 
 #: ../data/ui/yelp.glade.h:4
 msgid "<b>_Title:</b>"
@@ -215,7 +216,7 @@ msgstr ""
 
 #: ../data/ui/yelp.glade.h:6
 msgid "Bookmarks"
-msgstr ""
+msgstr "Bijare"
 
 #: ../data/ui/yelp.glade.h:7
 msgid "C_ase sensitive"
@@ -362,7 +363,6 @@ msgid "Unsupported Format"
 msgstr "Format nayê destekirin"
 
 #: ../src/yelp-error.c:54
-#, fuzzy
 msgid "Could not read document"
 msgstr "Nikarî pelge bixwîne"
 
@@ -474,7 +474,7 @@ msgstr ""
 
 #: ../src/yelp-toc-pager.c:1090
 msgid "Help Contents"
-msgstr ""
+msgstr "Naveroka Alîkariyê"
 
 #: ../src/yelp-window.c:287
 msgid "_File"
@@ -482,15 +482,15 @@ msgstr "_Dosiya"
 
 #: ../src/yelp-window.c:288
 msgid "_Edit"
-msgstr ""
+msgstr "_Biguherîne"
 
 #: ../src/yelp-window.c:289
 msgid "_Go"
-msgstr ""
+msgstr "_Here"
 
 #: ../src/yelp-window.c:290
 msgid "_Bookmarks"
-msgstr ""
+msgstr "_Bijare"
 
 #: ../src/yelp-window.c:291
 msgid "_Help"
@@ -498,19 +498,19 @@ msgstr "_Alîkarî"
 
 #: ../src/yelp-window.c:294
 msgid "_New Window"
-msgstr ""
+msgstr "Paceya _Nû"
 
 #: ../src/yelp-window.c:299
 msgid "About This Document"
-msgstr ""
+msgstr "Der Barê Vê Pelgeyê"
 
 #: ../src/yelp-window.c:304
 msgid "Open _Location"
-msgstr ""
+msgstr "Cihî _veke"
 
 #: ../src/yelp-window.c:309
 msgid "_Close Window"
-msgstr ""
+msgstr "_Paceyê Bigire"
 
 #: ../src/yelp-window.c:315
 msgid "_Copy"
@@ -521,22 +521,20 @@ msgid "_Select All"
 msgstr ""
 
 #: ../src/yelp-window.c:326
-#, fuzzy
 msgid "_Find..."
-msgstr "_Bibine"
+msgstr "_Bibîne..."
 
 #: ../src/yelp-window.c:331
-#, fuzzy
 msgid "_Preferences"
-msgstr "_Vebijark"
+msgstr "_Vebijêrk"
 
 #: ../src/yelp-window.c:336
 msgid "_Reload"
-msgstr ""
+msgstr "_Dîsa bar bike"
 
 #: ../src/yelp-window.c:342
 msgid "_Back"
-msgstr ""
+msgstr "P_aş"
 
 #: ../src/yelp-window.c:344
 msgid "Show previous page in history"
@@ -544,7 +542,7 @@ msgstr ""
 
 #: ../src/yelp-window.c:347
 msgid "_Forward"
-msgstr ""
+msgstr "_Pêş"
 
 #: ../src/yelp-window.c:349
 msgid "Show next page in history"
@@ -552,7 +550,7 @@ msgstr ""
 
 #: ../src/yelp-window.c:352
 msgid "_Help Topics"
-msgstr ""
+msgstr "_Mijarên Alîkariyê"
 
 #: ../src/yelp-window.c:354
 msgid "Go to the listing of help topics"
@@ -576,11 +574,11 @@ msgstr ""
 
 #: ../src/yelp-window.c:378
 msgid "_Edit Bookmarks..."
-msgstr ""
+msgstr "Bijareyan _biguherîne..."
 
 #: ../src/yelp-window.c:384
 msgid "_Open Link"
-msgstr ""
+msgstr "Girêdanê _Veke"
 
 #: ../src/yelp-window.c:389
 msgid "Open Link in _New Window"
@@ -596,7 +594,7 @@ msgstr "_Der barê"
 
 #: ../src/yelp-window.c:449
 msgid "Help Browser"
-msgstr ""
+msgstr "Geroka Alîkariyê"
 
 #: ../src/yelp-window.c:703 ../src/yelp-window.c:836
 msgid "The Uniform Resource Identifier for the file is invalid."
@@ -629,11 +627,11 @@ msgstr "Bibîne:"
 
 #: ../src/yelp-window.c:1048
 msgid "Find _Next"
-msgstr ""
+msgstr "Ya _Piştre Bibîne"
 
 #: ../src/yelp-window.c:1060
 msgid "Find _Previous"
-msgstr ""
+msgstr "Ya _Berê Bibîne"
 
 #: ../src/yelp-window.c:1165
 #, c-format
@@ -665,7 +663,7 @@ msgstr "Bar dike..."
 #. Note to translators: put here your name (and address) so it
 #: ../src/yelp-window.c:2184
 msgid "translator-credits"
-msgstr ""
+msgstr "Spasiya wergêran"
 
 #: ../src/yelp-window.c:2189
 msgid "A documentation browser and viewer for the Gnome Desktop."
@@ -687,5 +685,5 @@ msgstr ""
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
-msgstr ""
+msgstr "Ji GNOMEyê alîkarî bigire"
 
