- Add "Copy email address" option to popup menu
2005-10-15  Don Scorgie  <dscorgie@cvs.gnome.org>
        * src/yelp-window.c:
        * data/ui/yelp-ui.xml:
        - Add "Copy email address" option to popup menu

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-15  Don Scorgie  <dscorgie@cvs.gnome.org>
+	* src/yelp-window.c:
+	* data/ui/yelp-ui.xml:
+	- Add "Copy email address" option to popup menu
+	
 2005-10-14  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-window.c: (window_populate_find),
