--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2005-10-15  Don Scorgie  <dscorgie@cvs.gnome.org>
+	*src/yelp-toc-pager.c
+	- Replace stderr with stderr_string, fixes #314524
+
+2005-10-15  Don Scorgie  <dscorgie@cvs.gnome.org>
 	* src/yelp-window.c:
 	* data/ui/yelp-ui.xml:
 	- Add "Copy email address" option to popup menu
