data/ui/yelp.glade - patch from Gabriel Burt to fix #318485
2005-10-15  Don Scorgie <dscorgie@cvs.gnome.org>
        * data/ui/yelp.glade
        - patch from Gabriel Burt to fix #318485

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-15  Don Scorgie <dscorgie@cvs.gnome.org>
+	* data/ui/yelp.glade
+	- patch from Gabriel Burt to fix #318485
+
 2005-10-15  Don Scorgie  <dscorgie@cvs.gnome.org>
 	*src/yelp-toc-pager.c
 	- Replace stderr with stderr_string, fixes #314524
