--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-15  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2005-10-01  Runa Bhattacharjee <runa@bengalinux.org>
 
         * bn.po: Updated Bengali (bn) translation. Translation by Khandakar Mujahidul Islam <suzan@bengalinux.org>
