--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-18  Frederic Crozat  <fcrozat@mandriva.com>
+
+	* src/Makefile.am: don't ship generated files.
+
 2005-10-15  Don Scorgie <dscorgie@cvs.gnome.org>
 	* data/ui/yelp.glade
 	- patch from Gabriel Burt to fix #318485
