--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-25  Marcel Telka  <marcel@telka.sk>
+
+	* sk.po: Updated Slovak translation by Ivan Noris.
+
 2005-10-21  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated.
