Added Kirghiz translation by Timur Zhamakeev

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-26  Simos Xenitellis  <simos@gnome.org>
+
+	* ky.po: Added Kyrgyz (Kirghiz) translation by 
+	Timur Zhamakeev <ztimur@mail.ru>. This is the first Kirghiz
+	GNOME translation, welcome Timur!
+
 2005-10-25  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation by Ivan Noris.
