--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-27  Erdal Ronahi  <erdal.ronahi@gmail.com>
+
+	* ku.po: Updated Kurdish translation
+
 2005-10-26  Simos Xenitellis  <simos@gnome.org>
 
 	* ky.po: Added Kyrgyz (Kirghiz) translation by 
