Added ky (Kirghiz) to ALL_LINGUAS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-28  Simos Xenitellis  <simos@gnome.org>
+
+	* configure.in: Added ky (Kirghiz) to ALL_LINGUAS.
+
 2005-10-22  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-bookmarks.c: (yelp_bookmarks_edit):
