Add optional search framework.
2005-10-28  Christopher James Lahey  <clahey@ximian.com>

	* configure.in, data/yelp.js, data/ui/Makefile.am,
	data/ui/yelp-search-ui.xml, data/ui/yelp-ui.xml, src/Makefile.am,
	src/gtkentryaction.c, src/gtkentryaction.h,
	src/yelp-search-pager.c, src/yelp-search-pager.h,
	src/yelp-utils.c, src/yelp-utils.h, src/yelp-window.c,
	stylesheets/Makefile.am, stylesheets/search-header.xsl,
	stylesheets/search2html.xsl: Add optional search framework.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-10-28  Christopher James Lahey  <clahey@ximian.com>
+
+	* configure.in, data/yelp.js, data/ui/Makefile.am,
+	data/ui/yelp-search-ui.xml, data/ui/yelp-ui.xml, src/Makefile.am,
+	src/gtkentryaction.c, src/gtkentryaction.h,
+	src/yelp-search-pager.c, src/yelp-search-pager.h,
+	src/yelp-utils.c, src/yelp-utils.h, src/yelp-window.c,
+	stylesheets/Makefile.am, stylesheets/search-header.xsl,
+	stylesheets/search2html.xsl: Add optional search framework.
+
 2005-10-28  Simos Xenitellis  <simos@gnome.org>
 
 	* configure.in: Added ky (Kirghiz) to ALL_LINGUAS.
