--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-01  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Added missing file.
+	* en_CA.po: Updated Canadian English translation.
+
 2005-10-28  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
