Remove warning about `stock_id != NULL' in new window
2005-11-02  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-window.c:
	Remove warning about `stock_id != NULL' in new window

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-02  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-window.c: 
+	Remove warning about `stock_id != NULL' in new window
+
 2005-11-01  Christopher James Lahey  <clahey@ximian.com>
 
 	* src/yelp-search-pager.c: Set base_title property.  Added
