Allow compilation against xulrunner. Patch by Robert O'Callahan
2005-11-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:	Allow compilation against xulrunner.
	Patch by Robert O'Callahan <rocallahan@novell.com>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-07  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.in:	Allow compilation against xulrunner.
+	Patch by Robert O'Callahan <rocallahan@novell.com>.
+
 2005-10-22  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-bookmarks.c: (yelp_bookmarks_edit):
