--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-14  Timur Jamakeev  <timurj@cvs.gnome.org>
+
+	* ky.po: Translation updated.
+
 2005-11-11  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated.
