--- a/po/ky.po
+++ b/po/ky.po
@@ -1,6 +1,6 @@
 # Translation of yelp to Kyrgyz
 # Copyright (C) 2005 Free Software Foundation, Inc.
-# Timur Zhamakeev <ztimur@mail.ru>, 2005.
+# Timur Jamakeev <ztimur@gmail.com>, 2005.
 #
 msgid ""
 msgstr ""
