Make the window display the man page title
2005-11-21  Don Scorgie  <dscorgie@cvs.gnome.org>

	* stylesheets/man2html.xsl:
	Make the window display the man page title

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-11-21  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* stylesheets/man2html.xsl: 
+	Make the window display the man page title
+	
+2005-11-21  Don Scorgie  <dscorgie@cvs.gnome.org>
+
 	* src/yelp-info-pager.c: 
 	* stylesheets/toc2html.xsl: 
 	* stylesheets/info2html.xsl: 
