--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-22  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* data/ui/yelp-ui.xml: 
+	* src/yelp-window.c: 
+	Add Find Next
+	
 2005-11-21  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* stylesheets/man2html.xsl: 
