--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Changes in 2.12.2:
+------------------
+* Allow compilation against xulrunner (Robert O'Callahan)
+* Hide the bookmarks dialog on delete_event, #319502 (Brent Smith)
+* Fixed incorrect free, #319096 (Matthias Clasen)
+* Don't ship generated files (Frederic Crozat)
+* Hide the preferences dialog on delete_event, #318736 (Brent Smith)
+* Updated translations:
+  bn      (Khandakar Mujahidul Islam)
+  et      (Ivar Smolin)
+
 Changes in 2.12.1:
 ------------------
 * Updated translations:
