--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+==================== 2.12.2 ====================
+
+2005-11-27  Shaun McCance  <shaunm@gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.12.2
+
 2005-11-07  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.in:	Allow compilation against xulrunner.
