--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,44 @@
+Changes in 2.13.1:
+------------------
+* Beagle-based search                                       (Chris Lahey)
+* Added Find Next                                           (Don Scorgie)
+* Make the window display the man page title                (Don Scorgie)
+* Fixed CSS validation errors                               (Don Scorgie)
+* Fixed JavaScript error, #307948                           (Stuart Langridge)
+* Fixed invalid read, #166715                               (Don Scorgie)
+* Improved toc stylesheet performance                       (Brent Smith)
+* Handle xref anchors properly, #93721                      (Don Scorgie)
+* Allow compilation against xulrunner                       (Robert O'Callahan)
+* Remove warning about non existant bookmark file, #310097  (Paolo Borelli)
+* Hide the bookmarks dialog on delete_event, #319502        (Brent Smith)
+* Fixed incorrect free, #319096                             (Matthias Clasen)
+* Don't ship generated files                                (Frederic Crozat)
+* Hide the preferences dialog on delete_event, #318736      (Brent Smith)
+* Desensitive buttons when nothing selected, #318485        (Gabriel Burt)
+* Added "Copy email address" option to popup menu           (Don Scorgie)
+* Allow Enter to find next, #167420           (Jorge Bernal, Brent Smith)
+* Allow Esc to close find bar, #167414        (Jorge Bernal, Brent Smith)
+* Made the man parser ignore macros used by pod2man         (Brent Smith)
+* Handle troff \s+-[N] macros in man pages                  (Brent Smith)
+* Fix the SH, SS, and IP sibling selectors                  (Shaun McCance)
+* General cleanup                                           (Don Scorgie)
+* Updated translations:
+  bg      (Alexander Shopov)
+  bn      (Khandakar Mujahidul Islam)
+  cs      (Miloslav Trmac)
+  en_CA   (Adam Weinberger)
+  es      (Francisco Javier F. Serrador)
+  et      (Priit Laes)
+  fi      (Ilkka Tuohela)
+  gl      (Ignacio Casal Quinteiro)
+  ku      (Erdal Ronahi)
+  ky      (Timur Jamakeev)
+  nb      (Kjartan Maraas)
+  no      (Kjartan Maraas)
+  sk      (Ivan Noris)
+  sv      (Christian Rose)
+  th      (Theppitak Karoonboonyanan)
+
 Changes in 2.12.1:
 ------------------
 * Updated translations:
