--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+==================== 2.13.1 ====================
+
+2005-11-27  Shaun McCance  <shaunm@gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.13.1
+
 2005-11-22  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* data/ui/yelp-ui.xml: 
